--- a/vue.html
+++ b/vue.html
@@ -19,12 +19,12 @@
         <div id="vueSideBar" class="sideBar"></div>
         <div class="bodyContent">
             <div class="sectionDisplay alert alert-success">
-                <p class="mb-2"><b>2022/02/08 Updated: </b></p>
+                <p class="mb-2"><b>2022/02/21 Updated: </b></p>
+                <p class="mb-2">Usage of:</p>
                 <ol class="updateLog">
-                    <li>Setup</li>
-                    <li>Sample Template</li>
-                    <li>Call API function</li>
-                    <li>Build Table function</li>
+                    <li>v-if</li>
+                    <li>v-for</li>
+                    <li>v-model</li>
                 </ol>
 
                 <p class="mt-4 mb-2"><b>Official Documentation URL</b></p>
@@ -64,159 +64,257 @@
                 <h4>Page Template</h4>
                 <p>Sample page template for vue</p>
                 <div class="codeBlock">
-                    <div data-desc="Component template should contain exactly one root element. Display data using {{VARIABLE_NAME}}. You can use the v-model directive to create two-way data bindings on form input, textarea, and select elements.">
-                        <code>&lt;template&gt;</code>
-                        <code>  &lt;div&gt;</code>
-                        <code>    &lt;HelloWorld msg="Welcome to Your Vue.js App"/&gt;</code><br>
-                        <code>    &lt;div&gt;{{message}}&lt;/div&gt;</code><br>
-                        <code>    &lt;div @click="sampleFunction"&gt;Use @click for click function, @ is shorthand of v-on&lt;/div&gt;</code><br>
-                        <code>    &lt;div v-if="showBlock"&gt;if showBlock == true then show this block&lt;/div&gt;</code><br>
-                        <code>    &lt;div :data-name="name"&gt;In this case data-name = "abc" (based on variable declared in data), : is shorthand for v-bind&lt;/div&gt;</code><br>
-                        <code>    &lt;div data-name="name"&gt;If data-name didn't bind with any variable using :, it's a String, so in this case data-name="name"&lt;/div&gt;</code><br>
-                        <code>    &lt;input v-model="textInp" /&gt;</code><br>
-                        <code>  &lt;/div&gt;</code>
-                        <code>&lt;/template&gt;</code>
-                    </div>
-                    <br>
-                    <code>&lt;script&gt;</code>
-                    <code>// @ is an alias to /src</code>
-                    <div data-desc="Import component">
-                        <code>import HelloWorld from '@/components/HelloWorld.vue'</code>
-                    </div>
+<div data-desc="Component template should contain exactly one root element. Display data using {{VARIABLE_NAME}}. You can use the v-model directive to create two-way data bindings on form input, textarea, and select elements.">
+<code>&lt;template&gt;</code>
+<code>  &lt;div&gt;</code>
+<code>    &lt;HelloWorld msg="Welcome to Your Vue.js App"/&gt;</code><br>
+<code>    &lt;div&gt;{{message}}&lt;/div&gt;</code><br>
+<code>    &lt;div @click="sampleFunction"&gt;Use @click for click function, @ is shorthand of v-on&lt;/div&gt;</code><br>
+<code>    &lt;div v-if="showBlock"&gt;if showBlock == true then show this block&lt;/div&gt;</code><br>
+<code>    &lt;div :data-name="name"&gt;In this case data-name = "abc" (based on variable declared in data), : is shorthand for v-bind&lt;/div&gt;</code><br>
+<code>    &lt;div data-name="name"&gt;If data-name didn't bind with any variable using :, it's a String, so in this case data-name="name"&lt;/div&gt;</code><br>
+<code>    &lt;input v-model="textInp" /&gt;</code><br>
+<code>  &lt;/div&gt;</code>
+<code>&lt;/template&gt;</code>
+</div>
+<br>
+<code>&lt;script&gt;</code>
+<code>// @ is an alias to /src</code>
+<div data-desc="Import component">
+<code>import HelloWorld from '@/components/HelloWorld.vue'</code>
+</div>
 
-                    <code>export default {</code>
-                    <code>  name: 'Home',</code>
-                    <div data-desc="Declare variable here, to use data in template: {{VARIABLE_NAME}}, to use data in script: this.VARIABLE_NAME">
-                        <code>  data () {</code>
-                        <code>    return {</code>
-                        <code>        message: "Test",</code>
-                        <code>        message2: "Test 2",</code>
-                        <code>        showBlock: false,</code>
-                        <code>        name: "abc",</code>
-                        <code>        textInp: "abc",</code>
-                        <code>    }</code>
-                        <code>  },</code>
-                    </div>
-                    <div data-desc="Return reactive data">
-                        <code>  computed: {},</code>
-                    </div>
-                    <div data-desc="Declare component for usage">
-                        <code>  components: {</code>
-                        <code>    HelloWorld</code>
-                        <code>  },</code>
-                    </div>
-                    <code>  created: function(){</code>
-                    <code>    // window onload</code>
-                    <code>  },</code>
-                    <code>  mounted: function(){</code>
-                    <code>    // document ready</code>
-                    <code>  },</code>
-                    <code>  methods: {</code>
-                    <code>    sampleFunction: function() {</code>
-                    <code>      // your code</code>
-                    <code>    }</code>
-                    <code>  }</code>
-                    <code>}</code>
-                    <code>&lt;/script&gt;</code>
-                </div>
+<code>export default {</code>
+<code>  name: 'Home',</code>
+<div data-desc="Declare variable here, to use data in template: {{VARIABLE_NAME}}, to use data in script: this.VARIABLE_NAME">
+<code>  data () {</code>
+<code>    return {</code>
+<code>        message: "Test",</code>
+<code>        message2: "Test 2",</code>
+<code>        showBlock: false,</code>
+<code>        name: "abc",</code>
+<code>        textInp: "abc",</code>
+<code>    }</code>
+<code>  },</code>
+</div>
+<div data-desc="Return reactive data">
+<code>  computed: {},</code>
+</div>
+<div data-desc="Declare component for usage">
+<code>  components: {</code>
+<code>    HelloWorld</code>
+<code>  },</code>
+</div>
+<code>  created: function(){</code>
+<code>    // window onload</code>
+<code>  },</code>
+<code>  mounted: function(){</code>
+<code>    // document ready</code>
+<code>  },</code>
+<code>  methods: {</code>
+<code>    sampleFunction: function() {</code>
+<code>      // your code</code>
+<code>    }</code>
+<code>  }</code>
+<code>}</code>
+<code>&lt;/script&gt;</code>
+</div>
             </div>
             <div id="callAPI" class="sectionDisplay">
                 <h4>Call API</h4>
                 <div class="codeBlock">
-                    <code>// data that need pass to backend</code>
-                    <code>var formData = {</code>
-                    <code>    command: "documentDownloadList",</code>
-                    <code>    pageNumber: page || 1</code>
-                    <code>}</code>
-                    <br>
-                    <code>// call backend</code>
-                    <code>this.apiCaller(formData).then(result => {</code>
+<code>// data that need pass to backend</code>
+<code>var formData = {</code>
+<code>    command: "documentDownloadList",</code>
+<code>    pageNumber: page || 1</code>
+<code>}</code>
+<br>
+<code>// call backend</code>
+<code>this.apiCaller(formData).then(result => {</code>
 
-                    <code>    // this is data return from backend</code>
-                    <code>    let getData = result['data'];</code>
+<code>    // this is data return from backend</code>
+<code>    let getData = result['data'];</code>
 
-                    <code>    if(result['status'] == "ok") {</code>
-                    <code>        // your code here</code>
-                    <code>    }else{</code>
-                    <code>        this.errorHandler();</code>
-                    <code>    }</code>
-                    <code>});</code>
+<code>    if(result['status'] == "ok") {</code>
+<code>        // your code here</code>
+<code>    }else{</code>
+<code>        this.errorHandler();</code>
+<code>    }</code>
+<code>});</code>
                 </div>
             </div>
             <div id="buildTable" class="sectionDisplay">
                 <h4>Build Table</h4>
                 <p>Import table component (If need special control better build your own table component)</p>
                 <div class="codeBlock">
-                    <code>import customTable from "./subComponent/Table.vue"</code>
+<code>import customTable from "./subComponent/Table.vue"</code>
                 </div>
                 <p class="nextMethod">Register table component</p>
                 <div class="codeBlock">
-                    <code>components: {</code>
-                    <code>    customTable</code>
-                    <code>},</code>
+<code>components: {</code>
+<code>    customTable</code>
+<code>},</code>
                 </div>
                 <p class="nextMethod">sample data for build table</p>
                 <div class="codeBlock">
-                    <code>data () {</code>
-                    <code>    return {</code>
-                    <code>      message: this.$t('M00367') /*No Result Found*/ ,</code>
-                    <code>      divId: 'portfolioDiv',</code>
-                    <code>      tableId: 'portfolioList',</code>
-                    <code>      listData: [],</code>
-                    <code>      currentPage: 1,</code>
-                    <code>      totalPage: 1,</code>
-                    <code>      rows: 1,</code>
-                    <code>      perPage: 70,</code>
-                    <code>      showTable: true</code>
-                    <code>    }</code>
-                    <code>},</code>
+<code>data () {</code>
+<code>    return {</code>
+<code>      message: this.$t('M00367') /*No Result Found*/ ,</code>
+<code>      divId: 'portfolioDiv',</code>
+<code>      tableId: 'portfolioList',</code>
+<code>      listData: [],</code>
+<code>      currentPage: 1,</code>
+<code>      totalPage: 1,</code>
+<code>      rows: 1,</code>
+<code>      perPage: 70,</code>
+<code>      showTable: true</code>
+<code>    }</code>
+<code>},</code>
                 </div>
                 <p class="nextMethod">Build thArray</p>
                 <p><span class="text-danger">Put in computed instead of data</span></p>
                 <div class="codeBlock">
-                    <code>computed: {</code>
-                    <code>    thArray () {</code>
-                    <code>      return Array(</code>
-                    <code>        { text: this.$t('M00091'), value: 'date' },</code>
-                    <code>        { text: this.$t('M00064'), value: 'subject' },</code>
-                    <code>        { text: this.$t('M00065'), value: 'description' },</code>
-                    <code>      )</code>
-                    <code>    }</code>
-                    <code>},</code>
+<code>computed: {</code>
+<code>    thArray () {</code>
+<code>      return Array(</code>
+<code>        { text: this.$t('M00091'), value: 'date' },</code>
+<code>        { text: this.$t('M00064'), value: 'subject' },</code>
+<code>        { text: this.$t('M00065'), value: 'description' },</code>
+<code>      )</code>
+<code>    }</code>
+<code>},</code>
                 </div>
                 <p class="nextMethod">Build Table Data</p>
                 <div class="codeBlock">
-                    <code>buildTableData (list) {</code>
-                    <code>	if(list && list.length>0) {</code>
-                    <code>		var newList = [];</code>
-                    <code>		list.forEach((value, key) => {</code>
-                    <code>			newList.push({</code>
-                    <code>				date: value['created_at'],</code>
-                    <code>				subject: value['subject'],</code>
-                    <code>				description: value['description'],</code>
-                    <code>			});</code>
-                    <code>		});</code>
-                    <code>		this.listData = newList;</code>
-                    <code>	}</code>
-                    <code>},</code>
+<code>buildTableData (list) {</code>
+<code>	if(list && list.length>0) {</code>
+<code>		var newList = [];</code>
+<code>		list.forEach((value, key) => {</code>
+<code>			newList.push({</code>
+<code>				date: value['created_at'],</code>
+<code>				subject: value['subject'],</code>
+<code>				description: value['description'],</code>
+<code>			});</code>
+<code>		});</code>
+<code>		this.listData = newList;</code>
+<code>	}</code>
+<code>},</code>
                 </div>
                 <p class="nextMethod">Display Table</p>
                 <p><span class="text-danger">Put this in template (html)</span></p>
                 <div class="codeBlock">
-                    <code>&lt;customTable</code>
-                    <code>  v-if="showTable"</code>
-                    <code>  :showPagination="true"</code>
-                    <code>  :divId="divId"</code>
-                    <code>  :tableId="tableId"</code>
-                    <code>  :thArray="thArray"</code>
-                    <code>  :listData="listData"</code>
-                    <code>  :message="message"</code>
-                    <code>  :currentPage="currentPage"</code>
-                    <code>  :rows="rows"</code>
-                    <code>  :totalPage="totalPage"</code>
-                    <code>  :perPage="perPage"</code>
-                    <code>  @changePage="changePage($event)"&gt;</code>
-                    <code>&lt;/customTable&gt;</code>
+<code>&lt;customTable</code>
+<code>  v-if="showTable"</code>
+<code>  :showPagination="true"</code>
+<code>  :divId="divId"</code>
+<code>  :tableId="tableId"</code>
+<code>  :thArray="thArray"</code>
+<code>  :listData="listData"</code>
+<code>  :message="message"</code>
+<code>  :currentPage="currentPage"</code>
+<code>  :rows="rows"</code>
+<code>  :totalPage="totalPage"</code>
+<code>  :perPage="perPage"</code>
+<code>  @changePage="changePage($event)"&gt;</code>
+<code>&lt;/customTable&gt;</code>
+                </div>
+            </div>
+
+            <div id="ifElseCondition" class="sectionDisplay">
+                <h4>If Else Condition (v-if)</h4>
+                <p>Script</p>
+                <div class="codeBlock">
+<code>export default {</code>
+<code>    name: 'customPagination',</code>
+<code>    data () {</code>
+<code>      return {</code>
+<code>          isShow: false,</code>
+<code>          num: 10</code>
+<code>      }</code>
+<code>    },</code>
+<code>}</code>
+                </div>
+                <p class="nextMethod">Template</p>
+                <div class="codeBlock">
+<code>&lt;div&gt;</code>
+<code>    &lt;div v-if="isShow"&gt;Show this block if isShow == true&lt;/div&gt;</code>
+<code>    &lt;div v-else&gt;else show this block&lt;/div&gt;</code>
+<code>&lt;/div&gt;</code>
+<br>
+<code>&lt;div&gt;</code>
+<code>    &lt;div v-if="num &lt; 0"&gt;Show this block if num &lt; 0&lt;/div&gt;</code>
+<code>    &lt;div v-else-if="num &gt; 10"&gt;Show this block if num &gt; 10&lt;/div&gt;</code>
+<code>    &lt;div v-else&gt;if not fullfilled other conditional statement, default show this&lt;/div&gt;</code>
+<code>&lt;/div&gt;</code>
+                </div>
+            </div>
+
+            <div id="forLoop" class="sectionDisplay">
+                <h4>For Loop (v-for)</h4>
+                <p>Script</p>
+                <div class="codeBlock">
+<code>export default {</code>
+<code>  name: 'customPagination',</code>
+<code>  data () {</code>
+<code>    return {</code>
+<code>      array: [</code>
+<code>	    "Item 1",</code>
+<code>	    "Item 2",</code>
+<code>	    "Item 3",</code>
+<code>	    "Item 4",</code>
+<code>	    "Item 5",</code>
+<code>	    "Item 6",</code>
+<code>	    "Item 7",</code>
+<code>	],</code>
+<code>    }</code>
+<code>  },</code>
+<code>}</code>
+                </div>
+                <p class="nextMethod">Template</p>
+                <p>Like jQuery / vanilla js foreach function</p>
+                <div class="codeBlock">
+<code>&lt;div v-for="(v, k) in array" :key="k"&gt;Key: {{k}}, Value: {{v}}&lt;div&gt;</code>
+                </div>
+            </div>
+
+            <div id="formData" class="sectionDisplay">
+                <h4>Form Data (v-model)</h4>
+                <p>Script</p>
+                <div class="codeBlock">
+<code>export default {</code>
+<code>    name: 'form',</code>
+<code>    data () {</code>
+<code>      return {</code>
+<code>          text: "",</code>
+<code>          password: "",</code>
+<code>          checkbox: [],</code>
+<code>          radio: "radio1", // default check radio1</code>
+<code>          select: ""</code>
+<code>      }</code>
+<code>    },</code>
+<code>}</code>
+                </div>
+                <p class="nextMethod">Template</p>
+                <div class="codeBlock">
+<code>&lt;div&gt;</code>
+<code>    &lt;input type="text" v-model="text" /&gt;</code>
+<code>    &lt;input type="password" v-model="password"&gt;</code>
+<code>    &lt;div&gt;</code>
+<code>        &lt;input type="checkbox" id="check01" v-model="checkbox" value="check1" &gt; &lt;label for="check01"&gt;Check 01&lt;/label&gt;</code>
+<code>        &lt;input type="checkbox" id="check02" v-model="checkbox" value="check2" &gt; &lt;label for="check02"&gt;Check 02&lt;/label&gt;</code>
+<code>        &lt;input type="checkbox" id="check03" v-model="checkbox" value="check3" &gt; &lt;label for="check03"&gt;Check 03&lt;/label&gt;</code>
+<code>    &lt;/div&gt;</code>
+<code>    &lt;div&gt;</code>
+<code>        &lt;input type="radio" id="radio01" v-model="radio" value="radio1" &gt; &lt;label for="radio01"&gt;Radio 01&lt;/label&gt;</code>
+<code>        &lt;input type="radio" id="radio02" v-model="radio" value="radio2" &gt; &lt;label for="radio02"&gt;Radio 02&lt;/label&gt;</code>
+<code>        &lt;input type="radio" id="radio03" v-model="radio" value="radio3" &gt; &lt;label for="radio03"&gt;Radio 03&lt;/label&gt;</code>
+<code>    &lt;/div&gt;</code>
+<code>    &lt;select v-model="select"&gt;</code>
+<code>        &lt;option value=""&gt;All&lt;/option&gt;</code>
+<code>        &lt;option value="option1"&gt;Option 01&lt;/option&gt;</code>
+<code>        &lt;option value="option2"&gt;Option 02&lt;/option&gt;</code>
+<code>    &lt;/select&gt;</code>
+<code>&lt;/div&gt;</code>
                 </div>
             </div>
         </div>
