--- a/vueSidebar.html
+++ b/vueSidebar.html
@@ -2,8 +2,12 @@
 <span class="sideBarTitle">General</span>
 <a href="#setup" class="sideBarItem">Setup</a>
 <a href="#pageTemplate" class="sideBarItem">Sample Template</a>
+<a href="documentingVuex.html" class="sideBarItem">VueX</a>
 <a href="#callAPI" class="sideBarItem">Call API</a>
 <a href="#buildTable" class="sideBarItem">Build Table</a>
+<a href="#ifElseCondition" class="sideBarItem">If Else Condition</a>
+<a href="#forLoop" class="sideBarItem">For loop</a>
+<a href="#formData" class="sideBarItem">Form Data</a>
 
 <div class="modal fade" id="viewImg">
     <div class="modal-dialog modal-lg">
