--- a/vue.html
+++ b/vue.html
@@ -31,12 +31,16 @@
                 <ol class="updateLog">
                     <li><a href="https://v2.vuejs.org/v2/guide/index.html" target="_blank">Vue</a></li>
                     <li><a href="https://vuetifyjs.com/en/" target="_blank">Vuetify</a></li>
+                    <li><a href="https://bootstrap-vue.org/docs/components" target="_blank">Bootstrap Vue</a></li>
+                    <li><a href="https://www.npmjs.com/package/vue-qr" target="_blank">Vue QR</a></li>
+                    <li><a href="https://boxicons.com/" target="_blank">Box Icon</a></li>
                 </ol>
             </div>
             <div id="setup" class="sectionDisplay">
                 <h4>Setup</h4>
                 <h5>Install Vue CLI</h5>
                 <ol>
+                    <li>Download Node.js</li>
                     <li>Open cmd</li>
                     <li>
                         <div class="codeBlock">
@@ -55,7 +59,7 @@
                     </li>
                     <li class="mt-1">
                         <div class="codeBlock">
-                            <code>npm run dev</code>
+                            <code>npm run serve</code>
                         </div>
                     </li>
                 </ol>
