--- a/sidebar.html
+++ b/sidebar.html
@@ -2,6 +2,7 @@
 <a href="vue.html" class="sideBarItem">Vue</a>
 <a href="setupWin.html" class="sideBarItem">Setup Instructions</a>
 <a href="javascript:;" class="sideBarItem" data-toggle="modal" data-target="#sshKeyModal">Get SSH Key</a>
+<a href="javascript:;" class="sideBarItem" data-toggle="modal" data-target="#removeExtension">Remove File Extension</a>
 <span class="sideBarTitle">Basic Function</span>
 <a href="#callBackend" class="sideBarItem">Call Backend</a>
 <a href="#tableFunction" class="sideBarItem">Table Function</a>
