--- a/index.html
+++ b/index.html
@@ -904,7 +904,12 @@
                         </ul>
                     </li>
                     <li>Remove the # at the front of this line</li>
-                    <li>Move this .htaccess to C:\Apache24\htdocs <a href="htaccess.zip" download>Download</a></li>
+                    <li>Move this .htaccess (<a href="htaccess.zip" download>Download</a>) to 
+                        <ul>
+                            <li>C:\Apache24\htdocs ( Windows )</li>
+                            <li>~/Sites/ ( Mac )</li>
+                        </ul>
+                    </li>
                     <li>Restart Apache</li>
                     <li>try to access any project and remove file extension</li>
                 </ol>
