--- a/vue.html
+++ b/vue.html
@@ -34,6 +34,7 @@
                     <li><a href="https://bootstrap-vue.org/docs/components" target="_blank">Bootstrap Vue</a></li>
                     <li><a href="https://www.npmjs.com/package/vue-qr" target="_blank">Vue QR</a></li>
                     <li><a href="https://boxicons.com/" target="_blank">Box Icon</a></li>
+                    <li><a href="https://github.com/mengxiong10/vue2-datepicker" target="_blank">Datetime picker</a></li>
                 </ol>
             </div>
             <div id="setup" class="sectionDisplay">
